cmake_minimum_required(VERSION 3.16.3)

set(CMAKE_CUDA_COMPILER "/usr/local/cuda/bin/nvcc")
project(DesignPattern LANGUAGES CXX CUDA)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSION OFF)

message("current dir:${CMAKE_CURRENT_SOURCE_DIR}")
add_subdirectory(FactoryMethod)
add_subdirectory(AbstractFactory)
add_subdirectory(Builder)
add_subdirectory(ProtoType)
add_subdirectory(Singleton)
add_subdirectory(Adaptor)
add_subdirectory(Bridge)
add_subdirectory(Composite)
add_subdirectory(Decorator)
add_subdirectory(Facade)
add_subdirectory(Flyweight)
add_subdirectory(Proxy)